# robot-dev-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
brain/: Cargo.toml
brain/src/: lib.rs
interface/: Cargo.toml
interface/src/: communication.rs  main.rs
kinematics/: Cargo.toml
kinematics/src/: lib.rs  opw_kinematics.rs
